testsuite/tests/typecheck/should_fail/UnliftedNewtypesNotEnabled.hs
{-# LANGUAGE MagicHash #-}

module UnliftedNewtypesNotEnabled
  ( Baz(..)
  ) where

import GHC.Exts (Int#)

newtype Baz = Baz Int#
