testsuite/tests/typecheck/should_fail/UnliftedNewtypesNotEnabled.stderr

UnliftedNewtypesNotEnabled.hs:9:15: error:
    • A newtype must have an argument of kind *
      Perhaps you intended to use UnliftedNewtypes
    • In the definition of data constructor ‘Baz’
      In the newtype declaration for ‘Baz’
